SystemUI: Add LiveDisplay tile
Author: Steve Kondik <steve@cyngn.com>
Date:   Sun Nov 5 16:37:52 2017 +0100

    SystemUI: LiveDisplay tile

    Change-Id: I53d492e5cb9998268104d5750705aa5ed55d9658
    Signed-off-by: Joey Rizzoli <joey@lineageos.org>

Author: Unpublished <unpublished@gmx.net>
Date:   Fri Dec 29 23:00:01 2017 +0100

    livedisplay: Allow tile creation before boot completed phase [2/2]

    Change-Id: Ibef44d4e07da9baf296796515288c9d42aba8608

Author: Michael Bestas <mkbestas@lineageos.org>
Date:   Thu Feb 1 16:39:16 2018 +0000
Edit:   Refactor for Oreo

Change-Id: Ibef44d4e07da9baf296796515288c9d42aba8608

Author: Bruno Martins <bgcngm@gmail.com>
Date:   Thu Feb 1 17:01:43 2018 +0000

    LiveDisplayTile: Avoid NPE during boot up phase

     * During boot, with LineageHW not yet initialized there is no way to
       check the current LiveDisplay mode. In such cases, fallback to AUTO.

    Change-Id: Ifc004c86dfd68f73b8a362a1c833cbc3e7397811

Author: Han Wang <416810799@qq.com>
Date:   Tue Jun 4 18:03:59 2019 +0200

    LiveDisplayTile: Report unavailable on HWC2

    Change-Id: Ic10381e25046a2338bc6bda36ecbb5d5cefc1ab8

commit 9d95e3e77af723c6c783ee528d8d0a6f96369af5
Author: jhenrique09 <jhenrique09.mcz@hotmail.com>
Date:   Mon Aug 26 14:21:17 2019 -0300

    QSTileHost: Recreate tiles when LiveDisplay gets initialized

    Revert "LiveDisplayTile: Refresh state after livedisplay initialization"

    This reverts commit 42e327581e1006c30339c886ea381c162e3f5299.

    Change-Id: I9976076593684418c318e66803cf6e4f450975b2

commit 6b67f3b98fb5b5db4daf44f43afb6323f5bed57c
Author: DennySPB <dennyspb@gmail.com>
Date:   Mon Sep 23 16:52:22 2019 +0300

    LiveDisplayTile: Fixup modes cycling for aosp implementation

    Signed-off-by: DennySPB <dennyspb@gmail.com>
    Change-Id: I5edcef553ae32b4eb72882ef81ffe56f5074fc0d

commit 583bb96890ca118862513aa5bad9f71a97d4973b
Author: LuK1337 <priv.luk@gmail.com>
Date:   Fri Sep 6 23:41:14 2019 +0200

    LiveDisplay

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -340,6 +340,9 @@
     <uses-permission android:name="android.permission.MAINLINE_NETWORK_STACK" />
     <uses-permission android:name="android.permission.NETWORK_STACK" />
 
+    <!-- LiveDisplay -->
+    <uses-permission android:name="lineageos.permission.MANAGE_LIVEDISPLAY" />
+
     <!-- DataSwitch tile -->
     <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
 
